packages/ppx_ptree/test/compiler_cases/ppx_metadata.ml
module Nx = struct
  type ('element, 'layout) t = Tensor
end

type t = { metadata : string } [@@deriving ptree]
